<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
            android:id="@+id/swipe_refresh_message"
            app:srl_direction="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emj_container">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/messagesContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_alignParentBottom="true" />
        </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>


        <android.support.v7.widget.RecyclerView
            android:layout_above="@+id/linearLayout2"
            android:id="@+id/scroll_files"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:weightSum="100">

            <Button
                android:text="Choice image"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:id="@+id/button_choice_image"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/messageEditContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="85">

                <io.github.rockerhieu.emojicon.EmojiconEditText
                    android:id="@+id/messageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_message"
                    emojicon:emojiconSize="28sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="40dp"
                android:id="@+id/button_emoji"
                android:background="@drawable/emoji_1f600"
                android:layout_height="40dp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/chatSendButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Send MSG"
                android:elevation="8dp"
                android:layout_weight="15"/>
        </LinearLayout>

        <FrameLayout
            android:layout_above="@+id/linearLayout2"
            android:id="@+id/emj_container"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="300dp">
        </FrameLayout>


    </RelativeLayout>

</RelativeLayout>
