<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="false"
        android:layout_gravity="center_vertical|center_horizontal" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="149dp"
                        app:srcCompat="@drawable/seed_logo"
                        android:id="@+id/imageView"
                        android:scaleType="fitXY"
                        android:outlineProvider="bounds"
                        android:elevation="10dp" />



                <TextView
                        android:text="@string/restore_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_recovery"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="end"
                        android:clickable="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/password_tv"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <EditText
                        android:id="@+id/password_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:text="@string/remember_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/remember_password"
                    android:textColor="?android:attr/textColorTertiary" />


                    <Button
                        android:id="@+id/sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:stateListAnimator="@null"
                        android:elevation="3dp"
                        />


                    <Button
                        android:id="@+id/email_register_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_register"
                        android:textStyle="bold"
                        android:stateListAnimator="@null"
                        android:elevation="3dp"
                        android:layout_marginTop="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <Button
                        android:text="Facebook Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/but_facebook"
                        android:layout_weight="1" />

                    <Button
                        android:text="Twitter  login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/but_twitter"
                        android:layout_weight="1" />

                    <Button
                        android:text="Google+ login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/but_google"
                        android:layout_weight="1" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>